--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Anne van Kesteren</li>
 <li>Artem Kobzar</li>
 <li>Bernd Kaiser</li>
+<li>Brian Kardell</li>
 <li>Carlos Bentzen</li>
 <li>Daniel Ehrenberg</li>
 <li>Daniel Kolesa</li>
@@ -275,6 +276,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Sergey Rubanov</li>
 <li>sideshowbarker</li>
 <li>snek</li>
+<li>Stephanie Stimac</li>
 <li>Tiaan Louw</li>
 <li>Vadim Makeev</li>
 </ul>
