--- a/index.html
+++ b/index.html
@@ -245,40 +245,64 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <h2>Attendees</h2>
 <ul>
 <li>Aapo Alasuutari</li>
+<li>Adrian Perez</li>
 <li>Alejandro G. Castro</li>
+<li>Alexander Dunaev</li>
 <li>Andrei Svistunou</li>
 <li>Andreu Botella</li>
 <li>Anne van Kesteren</li>
+<li>Antonio Gomes</li>
 <li>Artem Kobzar</li>
 <li>Bernd Kaiser</li>
 <li>Brian Kardell</li>
 <li>Carlos Bentzen</li>
+<li>Cathie Chen</li>
 <li>Daniel Ehrenberg</li>
 <li>Daniel Kolesa</li>
 <li>Dave Vandyke</li>
+<li>Diego Pino Garcia</li>
 <li>Emilio Cobos</li>
+<li>Enrique Ocaña González</li>
+<li>Frédéric Wang</li>
 <li>Guillaume Emont</li>
+<li>Jan Horak</li>
+<li>Jani Hautakangas</li>
 <li>Javier Fernandez Garcia-Boente</li>
+<li>Jon Kuperman</li>
 <li>Jonas Kruckenberg</li>
 <li>Jonathan Kingston</li>
-<li>Jon Kuperman</li>
+<li>José Dapena Paz</li>
+<li>Joyee Cheung</li>
+<li>Juan J. Sánchez</li>
 <li>Keith Cirkel</li>
+<li>Lauro Moura</li>
 <li>Leo Kettmeir</li>
 <li>Luca Casonato</li>
 <li>Luke Warlow</li>
 <li>Manuel Rego</li>
+<li>Mario Sánchez Prada</li>
+<li>Martin Stransky</li>
 <li>mayask</li>
+<li>Miguel Gomez</li>
+<li>Mikhail R. Gadelha</li>
 <li>Mukilan Thiyagarajan</li>
 <li>Nico Burns</li>
 <li>Nicolò Ribaudo</li>
 <li>Olivier Tilloy</li>
 <li>Pablo Saavedra</li>
+<li>Patrick Griffis</li>
+<li>Pawel Lampe</li>
+<li>Przemyslaw Gorszkowski</li>
 <li>Sergey Rubanov</li>
 <li>sideshowbarker</li>
 <li>snek</li>
 <li>Stephanie Stimac</li>
 <li>Tiaan Louw</li>
+<li>Tiago Vignatti</li>
+<li>Ujjwal Sharma</li>
 <li>Vadim Makeev</li>
+<li>Vitaly Dyachkov</li>
+<li>Yeunjoo Choi</li>
 </ul>
 </div>
 </section>
