--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Daniel Kolesa</li>
 <li>Dave Vandyke</li>
 <li>Diego Pino Garcia</li>
+<li>Dietrich Ayala</li>
 <li>Emilio Cobos</li>
 <li>Enrique Ocaña González</li>
 <li>Frédéric Wang</li>
@@ -268,6 +269,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Jan Horak</li>
 <li>Jani Hautakangas</li>
 <li>Javier Fernandez Garcia-Boente</li>
+<li>Jesse Alama</li>
 <li>Jon Kuperman</li>
 <li>Jonas Kruckenberg</li>
 <li>Jonathan Kingston</li>
@@ -277,10 +279,12 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Keith Cirkel</li>
 <li>Lauro Moura</li>
 <li>Leo Kettmeir</li>
+<li>Lorenzo Tilve</li>
 <li>Luca Casonato</li>
 <li>Luke Warlow</li>
 <li>Manuel Rego</li>
 <li>Mario Sánchez Prada</li>
+<li>Martin Robinson</li>
 <li>Martin Stransky</li>
 <li>mayask</li>
 <li>Miguel Gomez</li>
@@ -292,7 +296,9 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Pablo Saavedra</li>
 <li>Patrick Griffis</li>
 <li>Pawel Lampe</li>
+<li>Philippe Normand</li>
 <li>Przemyslaw Gorszkowski</li>
+<li>Roger Zanoni</li>
 <li>Sergey Rubanov</li>
 <li>sideshowbarker</li>
 <li>snek</li>
