--- a/index.html
+++ b/index.html
@@ -513,10 +513,9 @@ This will include, but is not limited to:</p>
 symptoms, or if you are required to be in self-isolation or
 quarantine by COVID-19 regulations in Spain or at the location you
 are travelling from;</li>
-<li>complying with the prevailing mask-wearing policy communicated at
-the event; Even if when regulations have removed the obligation to
-wear masks, the organization establishes masks as recommended
-indoors;</li>
+<li>complying with the mask-wearing policy communicated at the event;
+even if when regulations have removed the obligation to wear masks,
+the organization establishes masks as recommended indoors;</li>
 <li>following instructions on physical distancing and crowd circulation
 at the event;</li>
 <li>observing good hand-washing and hygiene etiquette.</li>
