deploy: 3a021e5c441a5ee95795ff91182a34090e191f95

--- a/index.html
+++ b/index.html
@@ -286,13 +286,16 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Mario Sánchez Prada</li>
 <li>Martin Robinson</li>
 <li>Martin Stransky</li>
+<li>Max Ihlenfeldt</li>
 <li>mayask</li>
+<li>Michael Kolomeitsev</li>
 <li>Miguel Gomez</li>
 <li>Mikhail R. Gadelha</li>
 <li>Mukilan Thiyagarajan</li>
 <li>Nico Burns</li>
 <li>Nicolò Ribaudo</li>
 <li>Olivier Tilloy</li>
+<li>orko</li>
 <li>Pablo Saavedra</li>
 <li>Patrick Griffis</li>
 <li>Pawel Lampe</li>
@@ -307,6 +310,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Tiago Vignatti</li>
 <li>Ujjwal Sharma</li>
 <li>Vadim Makeev</li>
+<li>Valerie Young</li>
 <li>Vitaly Dyachkov</li>
 <li>Yeunjoo Choi</li>
 </ul>
