deploy: 71cfe26263c65e25a580f6fc8632cc1f9c67c941

--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Emilio Cobos</li>
 <li>Enrique Ocaña González</li>
 <li>Frédéric Wang</li>
+<li>Georg Tamm</li>
 <li>Guillaume Emont</li>
 <li>Jan Horak</li>
 <li>Jani Hautakangas</li>
