deploy: f47bbf4b69d35409a733158b14ee8f3aec41bfe6

--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Dave Vandyke</li>
 <li>Diego Pino Garcia</li>
 <li>Dietrich Ayala</li>
+<li>Dominic Farolino</li>
 <li>Emilio Cobos</li>
 <li>Enrique Ocaña González</li>
 <li>Frédéric Wang</li>
