deploy: 84e56e62cf4dbcd08977c5d763eaa2cb6b0892c5

--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Adrian Perez</li>
 <li>Alejandro G. Castro</li>
 <li>Alexander Dunaev</li>
+<li>Alicia Boya García</li>
 <li>Andrei Svistunou</li>
 <li>Andreu Botella</li>
 <li>Anne van Kesteren</li>
@@ -297,12 +298,14 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Nico Burns</li>
 <li>Nicolò Ribaudo</li>
 <li>Olivier Tilloy</li>
+<li>Oriol Brufau</li>
 <li>orko</li>
 <li>Pablo Saavedra</li>
 <li>Patrick Griffis</li>
 <li>Pawel Lampe</li>
 <li>Philippe Normand</li>
 <li>Przemyslaw Gorszkowski</li>
+<li>Rakhi Sharma</li>
 <li>Roger Zanoni</li>
 <li>Sergey Rubanov</li>
 <li>sideshowbarker</li>
