deploy: 974bd15bd4e26bccea8e487fda6a18e4f615830c

--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Dietrich Ayala</li>
 <li>Dominic Farolino</li>
 <li>Emilio Cobos</li>
+<li>Emma Kim</li>
 <li>Enrique Ocaña González</li>
 <li>Frédéric Wang</li>
 <li>Georg Tamm</li>
