deploy: 94926f82576a50e930fdc9cfde92838d0d2cd85e

--- a/index.html
+++ b/index.html
@@ -331,6 +331,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Mikhail R. Gadelha</li>
 <li>Miyoung Shin</li>
 <li>Mukilan Thiyagarajan</li>
+<li>Nick Yamane</li>
 <li>Nico Burns</li>
 <li>Nicolò Ribaudo</li>
 <li>Nikolas Zimmermann</li>
