deploy: f5857a08caca98666dafb5ecb3f45f5d43947eca

--- a/index.html
+++ b/index.html
@@ -295,12 +295,12 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Dietrich Ayala</li>
 <li>Dmitry Bezhetskov</li>
 <li>Dominic Farolino</li>
-<li>Emilio Cobos</li>
 <li>Emma Kim</li>
 <li>Enrique Ocaña González</li>
 <li>Frédéric Wang</li>
 <li>Georg Tamm</li>
 <li>Guillaume Emont</li>
+<li>Hugo Dias</li>
 <li>Jacobo Aragunde Pérez</li>
 <li>Jan Horak</li>
 <li>Jani Hautakangas</li>
