deploy: 25429bc67b80bca859d2286ec013cf002a8b29c0

--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Enrique Ocaña González</li>
 <li>Frédéric Wang</li>
 <li>Georg Tamm</li>
+<li>Georges Basile Stavracas Neto</li>
 <li>Guillaume Emont</li>
 <li>Hugo Dias</li>
 <li>Jacobo Aragunde Pérez</li>
@@ -313,6 +314,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Jonas Kruckenberg</li>
 <li>Jonathan Kingston</li>
 <li>José Dapena Paz</li>
+<li>José Manuel López Cobo</li>
 <li>Joyee Cheung</li>
 <li>Juan J. Sánchez</li>
 <li>Keith Cirkel</li>
