deploy: 9e8fd49eb0e412c9a6e5a1ea431e166766532a5d

--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Jon Kuperman</li>
 <li>Jonas Kruckenberg</li>
 <li>Jonathan Kingston</li>
+<li>Jonathan Schwender</li>
 <li>José Dapena Paz</li>
 <li>José Manuel López Cobo</li>
 <li>Joyee Cheung</li>
