deploy: 64210a33118bcf7b3f114a085164a1ccee786ed2

--- a/index.html
+++ b/index.html
@@ -271,6 +271,26 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 }
 </script>
 </section>
+<section id="breakout-sessions">
+<div class="section-wrapper">
+<h2>Breakout Sessions</h2>
+<ul>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/33">Compiling JavaScript ahead of time</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/31">Demoing the new WebKit Container SDK</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/24">How to build a new feature for the web platform — and make it a success with developers 2024</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/25">JavaScript standardization</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/28">Servo</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/26">Standardization across layers: Experiences with HTML, JS and Unicode</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/30">Testing OS-specific accessibility APIs in WPT - can it be done??</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/32">Trusted Types and The Sanitizer API</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/34">WPE-Android status update</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/26">Web Engines Rendering in Linux: sharing ideas and solutions</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/36">WebKit and Skia</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/29">WinterCG</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/35">Wolvic: a browser for WebXR applications</a></li>
+</ul>
+</div>
+</section>
 <section id="attendees">
 <div class="section-wrapper">
 <h2>Attendees</h2>
