deploy: be6362e5444e111fa1c52944b63e4ffef71e9717

--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li><a href="https://github.com/Igalia/webengineshackfest/issues/31">Demoing the new WebKit Container SDK</a></li>
 <li><a href="https://github.com/Igalia/webengineshackfest/issues/24">How to build a new feature for the web platform — and make it a success with developers 2024</a></li>
 <li><a href="https://github.com/Igalia/webengineshackfest/issues/25">JavaScript standardization</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/38">Reference Targets for Cross-Shadow Root IDREF associations</a></li>
 <li><a href="https://github.com/Igalia/webengineshackfest/issues/28">Servo</a></li>
 <li><a href="https://github.com/Igalia/webengineshackfest/issues/26">Standardization across layers: Experiences with HTML, JS and Unicode</a></li>
 <li><a href="https://github.com/Igalia/webengineshackfest/issues/30">Testing OS-specific accessibility APIs in WPT - can it be done??</a></li>
