deploy: bc1d1c3d27a113f8c5bcce04414674292efbd9f3

--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@ at the event;</li>
 open for lunch at 12:00 or for dinner at 18:00, neither at 19:00;
 thus you might want to start your day a bit &quot;later&quot; than usual.
 Main reason behind this is that A Coruña is in the same timezone
-than central Europe, and <a href="https://www.timeanddate.com/sun/spain/la-coruna">sunrise and sunset
+as central Europe, and <a href="https://www.timeanddate.com/sun/spain/la-coruna">sunrise and sunset
 times</a>
 are somehow shifted with regard to common standards in other parts
 of the world.</li>
