deploy: c0a842c92303b09bd163cab1a054bd54feb02dbd

--- a/sponsoring/index.html
+++ b/sponsoring/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="web hackfest, web engines hackfest, web engines, web browsers hackfest, web browsers, browsers hackfest, hackfest, conference, web conference, web engines conference, web platform, open web platform, open web hackfest, open web, chromium, blink, v8, safari, webkit, jsc, firefox, gecko, spidermonkey, servo, wpt, test262, w3c, whatwg, tc39" />
   <meta name="author" content="Igalia" />
 
-  <title>2024 Web Engines Hackfest</title>
+  <title>2025 Web Engines Hackfest</title>
 
   <link rel="icon" href="/favicon.ico" />
   <link href="/css/style.css" rel="stylesheet" />
@@ -20,11 +20,11 @@
 
 </head>
 
-    <script>document.title = "Web Engines Hackfest 2024 Sponsoring Packages"</script>
+    <script>document.title = "Web Engines Hackfest 2025 Sponsoring Packages"</script>
     <nav>
       <ul>
         <li>
-          <a href="#">Web Engines Hackfest 2024</a>
+          <a href="#">Web Engines Hackfest 2025</a>
         </li>
       </ul>
     </nav>
@@ -34,7 +34,7 @@
         <div class="section-wrapper">
           <h2>Sponsoring Packages</h2>
 <h3>Levels</h3>
-<h4>Gold Sponsor: 5,000 EUR</h4>
+<h4>Gold Sponsor: 6,000 EUR</h4>
 <ul>
 <li>Benefits:
 <ul>
@@ -47,7 +47,7 @@
 </ul>
 </li>
 </ul>
-<h4>Silver Sponsor: 2,500 EUR</h4>
+<h4>Silver Sponsor: 3,000 EUR</h4>
 <ul>
 <li>Benefits:
 <ul>
@@ -60,7 +60,7 @@
 </ul>
 </li>
 </ul>
-<h4>Bronze Sponsor: 1,000 EUR</h4>
+<h4>Bronze Sponsor: 1,500 EUR</h4>
 <ul>
 <li>Benefits:
 <ul>
@@ -71,9 +71,9 @@
 </ul>
 </li>
 </ul>
-<div style="break-inside: avoid; padding-top: 1em;">
+<div style="break-inside: avoid; padding-block: 1em;">
 <h3>Other</h3>
-<h4>Lunch Sponsor: 5,000 EUR</h4>
+<h4>Lunch Sponsor: 6,000 EUR</h4>
 <ul>
 <li>Description: Provide lunch for people attending the hackfest.</li>
 <li>Benefits:
@@ -86,8 +86,7 @@
 </ul>
 </li>
 </ul>
-<div class="sold" >
-<h4>Coffee &amp; Snacks Sponsor: 2,500 EUR (SOLD)</h4>
+<h4>Coffee &amp; Snacks Sponsor: 3,000 EUR</h4>
 <ul>
 <li>Description: Provide coffee &amp; snacks for people attending the hackfest.</li>
 <li>Benefits:
@@ -101,6 +100,9 @@
 </li>
 </ul>
 </div>
+<hr>
+<div style="font-size: smaller; font-style: italic;">
+Prices shown include VAT.
 </div>
 
         </div>
