deploy: ce9241b6c43e8d39693399f2fe267aafdfe3589f

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <section id="hackfest">
 <div class="section-wrapper">
 <h2>The hackfest</h2>
-<p><strong>The <em>2025 Web Engines Hackfest</em> will take place in A Coruña, Galicia, Spain from Monday, June 3th to Wednesday, June 5th.</strong></p>
+<p><strong>The <em>2025 Web Engines Hackfest</em> will take place in A Coruña, Galicia, Spain from Monday, June 2nd to Wednesday, June 4th.</strong></p>
 <p><strong>Registration form will open in the coming weeks.</strong></p>
 <!--
 
