deploy: d1633251c2a01cab0402e6afb34190b331163608

--- a/index.html
+++ b/index.html
@@ -701,16 +701,14 @@ code of conduct.</p>
 </ul>
 <p>Emails sent to <a href="mailto:conduct@igalia.com">conduct@igalia.com</a> are received by:</p>
 <ul>
+<li>Andy Wingo</li>
 <li>Brenna Brown</li>
-<li>Ioanna Dimitriou</li>
+<li>Danielle Mayabb</li>
 <li>Eric Meyer</li>
 <li>Javier Moran</li>
-<li>Germán Poo-Caamaño</li>
-<li>Andy Wingo</li>
 </ul>
 <p>For urgent issues, you may also call <a href="tel:+34951204844">+34 951 204 844</a> and then enter the PIN
-<code>1818</code> followed by the hash sign (<code>#</code>). This will call Javier Moran, Andy Wingo
-and Ioanna Dimitriou.</p>
+<code>1818</code> followed by the hash sign (<code>#</code>). This will call Andy Wingo, Brenna Brown, and Eric Meyer.</p>
 <p>People reported as violating the code of conduct will not take part in the
 process of handling that report. After the report, immediate action will be
 taken to ensure the safety and well-being of those involved.</p>
