deploy: 5ffb37f51b06f94608dd25643804563c20872613

--- a/index.html
+++ b/index.html
@@ -308,7 +308,18 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <section id="attendees">
 <div class="section-wrapper">
 <h2>Attendees</h2>
-<p>TBD</p>
+<ul>
+<li>Andrey Sitnik</li>
+<li>Dave Vandyke</li>
+<li>Jonas Kruckenberg</li>
+<li>Leo Kettmeir</li>
+<li>Lino Le Van</li>
+<li>Luke Warlow</li>
+<li>Manuel Rego</li>
+<li>Maxim Yaskevich</li>
+<li>Oliver Medhurst</li>
+<li>Ujjwal Sharma</li>
+</ul>
 </div>
 </section>
 <section id="venue">
