deploy: cd4c1764b3962c62125130d314d98dc1dd68711a

--- a/index.html
+++ b/index.html
@@ -309,16 +309,25 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <div class="section-wrapper">
 <h2>Attendees</h2>
 <ul>
+<li>Andreu Botella</li>
 <li>Andrey Sitnik</li>
+<li>Anne van Kesteren</li>
+<li>Bernd Kaiser</li>
+<li>Daniel Ehrenberg</li>
 <li>Dave Vandyke</li>
 <li>Jonas Kruckenberg</li>
+<li>Joyee Cheung</li>
 <li>Leo Kettmeir</li>
 <li>Lino Le Van</li>
 <li>Luke Warlow</li>
 <li>Manuel Rego</li>
 <li>Maxim Yaskevich</li>
+<li>Mukilan Thiyagarajan</li>
 <li>Oliver Medhurst</li>
+<li>Sergey Rubanov</li>
+<li>Tiago Vignatti</li>
 <li>Ujjwal Sharma</li>
+<li>snek</li>
 </ul>
 </div>
 </section>
