--- a/sponsoring/index.html
+++ b/sponsoring/index.html
@@ -4,8 +4,8 @@
     <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Web Platform community event for people working on the different engines (Chromium/Blink/V8, Safari/WebKit/JSC, Firefox/Gecko/SpiderMonkey, Servo, Ladybird), on the testing side (WPT, Test262), or on specifications (W3C, WhatWG, TC39)." />
-  <meta name="keywords" content="web hackfest, web engines hackfest, web engines, web browsers hackfest, web browsers, browsers hackfest, hackfest, conference, web conference, web engines conference, web platform, open web platform, open web hackfest, open web, chromium, blink, v8, safari, webkit, jsc, firefox, gecko, spidermonkey, servo, ladybird, wpt, test262, w3c, whatwg, tc39" />
+  <meta name="description" content="Web Platform community event for people working on the different engines (Chromium/Blink/V8, Safari/WebKit/JSC, Firefox/Gecko/SpiderMonkey, Servo, Ladybird), on the testing side (WPT, Test262), on specifications (W3C, WhatWG, TC39), on web compat (webcompat.com), or on documentation (MDN Web Docs, web.dev)." />
+  <meta name="keywords" content="web hackfest, web engines hackfest, web engines, web browsers hackfest, web browsers, browsers hackfest, hackfest, conference, web conference, web engines conference, web platform, open web platform, open web hackfest, open web, chromium, blink, v8, safari, webkit, jsc, firefox, gecko, spidermonkey, servo, ladybird, wpt, test262, w3c, whatwg, tc39, specifications, documentation, mdn, web compat" />
   <meta name="author" content="Igalia" />
 
   <title>2025 Web Engines Hackfest</title>
