deploy: 14faf4dfe198f2a48a6e0b7e22d39c25f6a16418

--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <ul>
 <li><a href="https://github.com/Igalia/webengineshackfest/issues/33">Compiling JavaScript ahead of time</a></li>
 <li><a href="https://github.com/Igalia/webengineshackfest/issues/31">Demoing the new WebKit Container SDK</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/40">Funding the Web Ecosystem</a></li>
 <li><a href="https://github.com/Igalia/webengineshackfest/issues/24">How to build a new feature for the web platform — and make it a success with developers 2024</a></li>
 <li><a href="https://github.com/Igalia/webengineshackfest/issues/25">JavaScript standardization</a></li>
 <li><a href="https://github.com/Igalia/webengineshackfest/issues/38">Reference Targets for Cross-Shadow Root IDREF associations</a></li>
