--- a/index.html
+++ b/index.html
@@ -310,25 +310,39 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <div class="section-wrapper">
 <h2>Attendees</h2>
 <ul>
+<li>Alicia Boya Garcia</li>
 <li>Andreu Botella</li>
 <li>Andrey Sitnik</li>
 <li>Anne van Kesteren</li>
 <li>Bernd Kaiser</li>
 <li>Daniel Ehrenberg</li>
 <li>Dave Vandyke</li>
+<li>Diego Pino Garcia</li>
+<li>Frédéric Wang</li>
 <li>Jonas Kruckenberg</li>
+<li>Jonathan Schwender</li>
+<li>Joyee Cheung</li>
 <li>Joyee Cheung</li>
 <li>Leo Kettmeir</li>
 <li>Lino Le Van</li>
+<li>Luca Casonato</li>
 <li>Luke Warlow</li>
 <li>Manuel Rego</li>
 <li>Maxim Yaskevich</li>
+<li>Miyoung Shin</li>
 <li>Mukilan Thiyagarajan</li>
+<li>Mukilan Thiyagarajan</li>
+<li>Nicolò Ribaudo</li>
 <li>Oliver Medhurst</li>
+<li>Patrick Griffis</li>
 <li>Sergey Rubanov</li>
+<li>sideshowbarker</li>
+<li>snek</li>
+<li>Tiago Vignatti</li>
 <li>Tiago Vignatti</li>
 <li>Ujjwal Sharma</li>
-<li>snek</li>
+<li>Vitaly Dyachkov</li>
+<li>Xabier Rodríguez Calvar</li>
 </ul>
 </div>
 </section>
