deploy: 20fe0dc4bd835d4aa405620dc533ea3122879657

--- a/sponsoring/index.html
+++ b/sponsoring/index.html
@@ -24,7 +24,7 @@
     <nav>
       <ul>
         <li>
-          <a href="#">Web Engines Hackfest 2025</a>
+          <a href="/">Web Engines Hackfest 2025</a>
         </li>
       </ul>
     </nav>
