deploy: 07bfac85e7bc8769acd475b611431283c42a38cc

--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Daniel Ehrenberg</li>
 <li>Dave Vandyke</li>
 <li>Diego Pino Garcia</li>
+<li>Enrique Ocaña González</li>
 <li>Frédéric Wang</li>
 <li>Jonas Kruckenberg</li>
 <li>Jonathan Schwender</li>
@@ -327,15 +328,20 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Luca Casonato</li>
 <li>Luke Warlow</li>
 <li>Manuel Rego</li>
+<li>Martin Robinson</li>
 <li>Maxim Yaskevich</li>
 <li>Miyoung Shin</li>
 <li>Mukilan Thiyagarajan</li>
 <li>Nicolò Ribaudo</li>
 <li>Oliver Medhurst</li>
 <li>Patrick Griffis</li>
+<li>Pawel Lampe</li>
+<li>Sam Weinig</li>
 <li>Sergey Rubanov</li>
 <li>sideshowbarker</li>
 <li>snek</li>
+<li>Taym Haddadi</li>
+<li>Thomas Steiner</li>
 <li>Tiago Vignatti</li>
 <li>Ujjwal Sharma</li>
 <li>Vitaly Dyachkov</li>
