--- a/index.html
+++ b/index.html
@@ -325,13 +325,16 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Joyee Cheung</li>
 <li>Leo Kettmeir</li>
 <li>Lino Le Van</li>
+<li>Lola Odelola</li>
 <li>Luca Casonato</li>
 <li>Luke Warlow</li>
 <li>Manuel Rego</li>
 <li>Martin Robinson</li>
 <li>Maxim Yaskevich</li>
+<li>Michael Kolomeitsev</li>
 <li>Miyoung Shin</li>
 <li>Mukilan Thiyagarajan</li>
+<li>Nick Pfeiffer</li>
 <li>Nicolò Ribaudo</li>
 <li>Oliver Medhurst</li>
 <li>Patrick Griffis</li>
