--- a/index.html
+++ b/index.html
@@ -310,11 +310,14 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <div class="section-wrapper">
 <h2>Attendees</h2>
 <ul>
+<li>Aapo Alasuutari</li>
 <li>Alicia Boya Garcia</li>
 <li>Andreu Botella</li>
-<li>Andrey Sitnik</li>
+<li>Angel M Miguel</li>
 <li>Anne van Kesteren</li>
 <li>Bernd Kaiser</li>
+<li>Carlos Bentzen</li>
+<li>Claudio Saavedra</li>
 <li>Daniel Ehrenberg</li>
 <li>Dave Vandyke</li>
 <li>Diego Pino Garcia</li>
@@ -339,6 +342,9 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Oliver Medhurst</li>
 <li>Patrick Griffis</li>
 <li>Pawel Lampe</li>
+<li>Przemyslaw Gorszkowski</li>
+<li>Rafael Fernández López</li>
+<li>Roger Zanoni</li>
 <li>Sam Weinig</li>
 <li>Sergey Rubanov</li>
 <li>sideshowbarker</li>
