--- a/sponsoring/index.html
+++ b/sponsoring/index.html
@@ -86,7 +86,8 @@
 </ul>
 </li>
 </ul>
-<h4>Coffee &amp; Snacks Sponsor: 3,000 EUR</h4>
+<div class="sold">
+<h4>Coffee &amp; Snacks Sponsor: 3,000 EUR (SOLD)</h4>
 <ul>
 <li>Description: Provide coffee &amp; snacks for people attending the hackfest.</li>
 <li>Benefits:
@@ -99,6 +100,7 @@
 </ul>
 </li>
 </ul>
+</div>
 </div>
 <hr>
 <div style="font-size: smaller; font-style: italic;">
