deploy: ce64d7fc0788758133bafcb58a46474de7d58f47

--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Daniel Ehrenberg</li>
 <li>Dave Vandyke</li>
 <li>Diego Pino Garcia</li>
+<li>Emilio Cobos Álvarez</li>
 <li>Enrique Ocaña González</li>
 <li>Frédéric Wang</li>
 <li>Jonas Kruckenberg</li>
@@ -329,6 +330,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Leo Kettmeir</li>
 <li>Lino Le Van</li>
 <li>Lola Odelola</li>
+<li>Lorenzo Tilve</li>
 <li>Luca Casonato</li>
 <li>Luke Warlow</li>
 <li>Manuel Rego</li>
@@ -344,6 +346,8 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Pawel Lampe</li>
 <li>Przemyslaw Gorszkowski</li>
 <li>Rafael Fernández López</li>
+<li>Raphael Kubo da Costa</li>
+<li>Robert Kroeger</li>
 <li>Roger Zanoni</li>
 <li>Sam Weinig</li>
 <li>Sergey Rubanov</li>
