deploy: 3f2b88c82cce5b8e30e8a56e3f60dbc53ab147d2

--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Alicia Boya Garcia</li>
 <li>Andreu Botella</li>
 <li>Angel M Miguel</li>
+<li>Ankesh Bharti</li>
 <li>Anne van Kesteren</li>
 <li>Bernd Kaiser</li>
 <li>Carlos Bentzen</li>
@@ -321,10 +322,14 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Daniel Ehrenberg</li>
 <li>Dave Vandyke</li>
 <li>Diego Pino Garcia</li>
+<li>Dietrich Ayala</li>
+<li>Dominik Röttsches</li>
 <li>Emilio Cobos Álvarez</li>
 <li>Enrique Ocaña González</li>
 <li>Frédéric Wang</li>
+<li>Georges Basile Stavracas Neto</li>
 <li>Jonas Kruckenberg</li>
+<li>Jonathan Kew</li>
 <li>Jonathan Schwender</li>
 <li>Joyee Cheung</li>
 <li>Leo Kettmeir</li>
@@ -341,6 +346,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Mukilan Thiyagarajan</li>
 <li>Nick Pfeiffer</li>
 <li>Nicolò Ribaudo</li>
+<li>Nikolas Zimmermann</li>
 <li>Oliver Medhurst</li>
 <li>Patrick Griffis</li>
 <li>Pawel Lampe</li>
@@ -348,10 +354,12 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Rafael Fernández López</li>
 <li>Raphael Kubo da Costa</li>
 <li>Robert Kroeger</li>
+<li>Robin Berjon</li>
 <li>Roger Zanoni</li>
 <li>Sam Weinig</li>
 <li>Sergey Rubanov</li>
 <li>sideshowbarker</li>
+<li>Simon Wülker</li>
 <li>snek</li>
 <li>Taym Haddadi</li>
 <li>Thomas Steiner</li>
