deploy: fcb4bf4d6db889a45efd2c4030201a8c4b5169b7

--- a/index.html
+++ b/index.html
@@ -328,6 +328,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Enrique Ocaña González</li>
 <li>Frédéric Wang</li>
 <li>Georges Basile Stavracas Neto</li>
+<li>Jesse Alama</li>
 <li>Jonas Kruckenberg</li>
 <li>Jonathan Kew</li>
 <li>Jonathan Schwender</li>
@@ -339,17 +340,22 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Luca Casonato</li>
 <li>Luke Warlow</li>
 <li>Manuel Rego</li>
+<li>Mario Sánchez-Prada</li>
 <li>Martin Robinson</li>
 <li>Maxim Yaskevich</li>
 <li>Michael Kolomeitsev</li>
 <li>Miyoung Shin</li>
+<li>Ms2ger</li>
 <li>Mukilan Thiyagarajan</li>
 <li>Nick Pfeiffer</li>
 <li>Nicolò Ribaudo</li>
 <li>Nikolas Zimmermann</li>
+<li>Nina Kolesa</li>
 <li>Oliver Medhurst</li>
+<li>Pablo Saavedra Rodiño</li>
 <li>Patrick Griffis</li>
 <li>Pawel Lampe</li>
+<li>Philippe Normand</li>
 <li>Przemyslaw Gorszkowski</li>
 <li>Rafael Fernández López</li>
 <li>Raphael Kubo da Costa</li>
@@ -367,6 +373,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Ujjwal Sharma</li>
 <li>Vitaly Dyachkov</li>
 <li>Xabier Rodríguez Calvar</li>
+<li>Youenn Fablet</li>
 </ul>
 </div>
 </section>
