--- a/index.html
+++ b/index.html
@@ -311,28 +311,36 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <h2>Attendees</h2>
 <ul>
 <li>Aapo Alasuutari</li>
+<li>Alejandro G. Castro</li>
 <li>Alicia Boya Garcia</li>
 <li>Andreu Botella</li>
 <li>Angel M Miguel</li>
 <li>Ankesh Bharti</li>
+<li>Anna Weine</li>
 <li>Anne van Kesteren</li>
 <li>Bernd Kaiser</li>
+<li>Byungwoo Lee</li>
 <li>Carlos Bentzen</li>
 <li>Claudio Saavedra</li>
 <li>Daniel Ehrenberg</li>
 <li>Dave Vandyke</li>
 <li>Diego Pino Garcia</li>
 <li>Dietrich Ayala</li>
+<li>Dmitry Bezhetskov</li>
 <li>Dominik Röttsches</li>
 <li>Emilio Cobos Álvarez</li>
 <li>Enrique Ocaña González</li>
 <li>Frédéric Wang</li>
 <li>Georges Basile Stavracas Neto</li>
+<li>Jeongeun Kim</li>
 <li>Jesse Alama</li>
+<li>Jon Kuperman</li>
 <li>Jonas Kruckenberg</li>
 <li>Jonathan Kew</li>
 <li>Jonathan Schwender</li>
+<li>José Dapena Paz</li>
 <li>Joyee Cheung</li>
+<li>Justin Michaud</li>
 <li>Leo Kettmeir</li>
 <li>Lino Le Van</li>
 <li>Lola Odelola</li>
@@ -342,8 +350,10 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Manuel Rego</li>
 <li>Mario Sánchez-Prada</li>
 <li>Martin Robinson</li>
+<li>Max Ihlenfeldt</li>
 <li>Maxim Yaskevich</li>
 <li>Michael Kolomeitsev</li>
+<li>Miguel Gomez</li>
 <li>Miyoung Shin</li>
 <li>Ms2ger</li>
 <li>Mukilan Thiyagarajan</li>
@@ -352,9 +362,11 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Nikolas Zimmermann</li>
 <li>Nina Kolesa</li>
 <li>Oliver Medhurst</li>
+<li>Olivier Tilloy</li>
 <li>Pablo Saavedra Rodiño</li>
 <li>Patrick Griffis</li>
 <li>Pawel Lampe</li>
+<li>Philip Chimento</li>
 <li>Philippe Normand</li>
 <li>Przemyslaw Gorszkowski</li>
 <li>Rafael Fernández López</li>
@@ -362,17 +374,22 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Robert Kroeger</li>
 <li>Robin Berjon</li>
 <li>Roger Zanoni</li>
+<li>Romulo Cintra</li>
 <li>Sam Weinig</li>
 <li>Sergey Rubanov</li>
 <li>sideshowbarker</li>
+<li>Simon Pena</li>
 <li>Simon Wülker</li>
 <li>snek</li>
+<li>Stephen Chenney</li>
 <li>Taym Haddadi</li>
 <li>Thomas Steiner</li>
 <li>Tiago Vignatti</li>
 <li>Ujjwal Sharma</li>
+<li>Valerie Young</li>
 <li>Vitaly Dyachkov</li>
 <li>Xabier Rodríguez Calvar</li>
+<li>Yeunjoo Choi</li>
 <li>Youenn Fablet</li>
 </ul>
 </div>
