--- a/index.html
+++ b/index.html
@@ -311,7 +311,9 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <h2>Attendees</h2>
 <ul>
 <li>Aapo Alasuutari</li>
+<li>Abhijeet Kandalkar</li>
 <li>Alejandro G. Castro</li>
+<li>Alexander Dunaev</li>
 <li>Alicia Boya Garcia</li>
 <li>Andreu Botella</li>
 <li>Angel M Miguel</li>
@@ -328,25 +330,31 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Dietrich Ayala</li>
 <li>Dmitry Bezhetskov</li>
 <li>Dominik Röttsches</li>
+<li>Dongxu Liu</li>
 <li>Emilio Cobos Álvarez</li>
 <li>Enrique Ocaña González</li>
 <li>Frédéric Wang</li>
 <li>Georges Basile Stavracas Neto</li>
+<li>Ioanna M. Dimitriou H.</li>
 <li>Jeongeun Kim</li>
 <li>Jesse Alama</li>
 <li>Jon Kuperman</li>
 <li>Jonas Kruckenberg</li>
+<li>Jonas Menken</li>
 <li>Jonathan Kew</li>
 <li>Jonathan Schwender</li>
 <li>José Dapena Paz</li>
 <li>Joyee Cheung</li>
 <li>Justin Michaud</li>
+<li>Keeley Hammond</li>
+<li>Kyungsun Lee</li>
 <li>Leo Kettmeir</li>
 <li>Lino Le Van</li>
 <li>Lola Odelola</li>
 <li>Lorenzo Tilve</li>
 <li>Luca Casonato</li>
 <li>Luke Warlow</li>
+<li>Maksim Sisov</li>
 <li>Manuel Rego</li>
 <li>Mario Sánchez-Prada</li>
 <li>Martin Robinson</li>
@@ -357,19 +365,24 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Miyoung Shin</li>
 <li>Ms2ger</li>
 <li>Mukilan Thiyagarajan</li>
+<li>Nguyen Viet Do</li>
 <li>Nick Pfeiffer</li>
+<li>Nick Yamane</li>
 <li>Nicolò Ribaudo</li>
 <li>Nikolas Zimmermann</li>
 <li>Nina Kolesa</li>
 <li>Oliver Medhurst</li>
 <li>Olivier Tilloy</li>
+<li>Oriol Brufau</li>
 <li>Pablo Saavedra Rodiño</li>
 <li>Patrick Griffis</li>
 <li>Pawel Lampe</li>
 <li>Philip Chimento</li>
 <li>Philippe Normand</li>
+<li>Pier Angelo Vendrame</li>
 <li>Przemyslaw Gorszkowski</li>
 <li>Rafael Fernández López</li>
+<li>Rakhi Sharma</li>
 <li>Raphael Kubo da Costa</li>
 <li>Robert Kroeger</li>
 <li>Robin Berjon</li>
