--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Ioanna M. Dimitriou H.</li>
 <li>Jeongeun Kim</li>
 <li>Jesse Alama</li>
+<li>Jon Butler</li>
 <li>Jon Kuperman</li>
 <li>Jonas Kruckenberg</li>
 <li>Jonas Menken</li>
@@ -388,6 +389,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Robin Berjon</li>
 <li>Roger Zanoni</li>
 <li>Romulo Cintra</li>
+<li>Rui Hildt</li>
 <li>Sam Weinig</li>
 <li>Sergey Rubanov</li>
 <li>sideshowbarker</li>
@@ -402,6 +404,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Valerie Young</li>
 <li>Vitaly Dyachkov</li>
 <li>Xabier Rodríguez Calvar</li>
+<li>Xiaoqian Wu</li>
 <li>Yeunjoo Choi</li>
 <li>Youenn Fablet</li>
 </ul>
