deploy: 940e757fa1edb343be87c1d915423407561501d1

--- a/index.html
+++ b/index.html
@@ -312,6 +312,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <ul>
 <li>Aapo Alasuutari</li>
 <li>Abhijeet Kandalkar</li>
+<li>Adrián Mora Rodríguez</li>
 <li>Alejandro G. Castro</li>
 <li>Alexander Dunaev</li>
 <li>Alicia Boya Garcia</li>
@@ -323,6 +324,9 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Bernd Kaiser</li>
 <li>Byungwoo Lee</li>
 <li>Carlos Bentzen</li>
+<li>Carmen Cañas</li>
+<li>Casiano Rodriguez-Leon</li>
+<li>Chris Cuellar</li>
 <li>Claudio Saavedra</li>
 <li>Daniel Ehrenberg</li>
 <li>Dave Vandyke</li>
@@ -331,6 +335,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Dmitry Bezhetskov</li>
 <li>Dominik Röttsches</li>
 <li>Dongxu Liu</li>
+<li>Eemeli Aro</li>
 <li>Emilio Cobos Álvarez</li>
 <li>Enrique Ocaña González</li>
 <li>Frédéric Wang</li>
@@ -363,6 +368,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Maxim Yaskevich</li>
 <li>Michael Kolomeitsev</li>
 <li>Miguel Gomez</li>
+<li>Mike Pennisi</li>
 <li>Miyoung Shin</li>
 <li>Ms2ger</li>
 <li>Mukilan Thiyagarajan</li>
@@ -376,6 +382,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Olivier Tilloy</li>
 <li>Oriol Brufau</li>
 <li>Pablo Saavedra Rodiño</li>
+<li>Pablo Santana Gonzalez</li>
 <li>Patrick Griffis</li>
 <li>Pawel Lampe</li>
 <li>Philip Chimento</li>
@@ -385,6 +392,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Rafael Fernández López</li>
 <li>Rakhi Sharma</li>
 <li>Raphael Kubo da Costa</li>
+<li>Rob Buis</li>
 <li>Robert Kroeger</li>
 <li>Robin Berjon</li>
 <li>Roger Zanoni</li>
