deploy: 87af2c890de3bb0d13f68e9be4bb019427ca87d7

--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Claudio Saavedra</li>
 <li>Daniel Ehrenberg</li>
 <li>Dave Vandyke</li>
+<li>Diego González</li>
 <li>Diego Pino Garcia</li>
 <li>Dietrich Ayala</li>
 <li>Dmitry Bezhetskov</li>
@@ -341,10 +342,12 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Frédéric Wang</li>
 <li>Georges Basile Stavracas Neto</li>
 <li>Ioanna M. Dimitriou H.</li>
+<li>Jan Bajana</li>
 <li>Jeongeun Kim</li>
 <li>Jesse Alama</li>
 <li>Jon Butler</li>
 <li>Jon Kuperman</li>
+<li>Jonas Haukenes</li>
 <li>Jonas Kruckenberg</li>
 <li>Jonas Menken</li>
 <li>Jonathan Kew</li>
@@ -353,6 +356,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Joyee Cheung</li>
 <li>Justin Michaud</li>
 <li>Keeley Hammond</li>
+<li>Keith Cirkel</li>
 <li>Kyungsun Lee</li>
 <li>Leo Kettmeir</li>
 <li>Lino Le Van</li>
@@ -369,6 +373,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Michael Kolomeitsev</li>
 <li>Miguel Gomez</li>
 <li>Mike Pennisi</li>
+<li>Mikhail Barash</li>
 <li>Miyoung Shin</li>
 <li>Ms2ger</li>
 <li>Mukilan Thiyagarajan</li>
@@ -410,7 +415,9 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Tiago Vignatti</li>
 <li>Ujjwal Sharma</li>
 <li>Valerie Young</li>
+<li>Vincent Hilla</li>
 <li>Vitaly Dyachkov</li>
+<li>Vlad Zahorodnii</li>
 <li>Xabier Rodríguez Calvar</li>
 <li>Xiaoqian Wu</li>
 <li>Yeunjoo Choi</li>
