deploy: 98e0ac1017e141bf1bdba549e3c7aeef97b5d438

--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Aapo Alasuutari</li>
 <li>Abhijeet Kandalkar</li>
 <li>Adrián Mora Rodríguez</li>
+<li>Adrián Pérez de Castro</li>
 <li>Alejandro G. Castro</li>
 <li>Alexander Dunaev</li>
 <li>Alicia Boya Garcia</li>
@@ -341,6 +342,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Enrique Ocaña González</li>
 <li>Frédéric Wang</li>
 <li>Georges Basile Stavracas Neto</li>
+<li>Giorgio Maone</li>
 <li>Ioanna M. Dimitriou H.</li>
 <li>Jan Bajana</li>
 <li>Jeongeun Kim</li>
