deploy: 7b6395eaa80632da14e712d8c8fc2a5fb8d9d845

--- a/index.html
+++ b/index.html
@@ -356,6 +356,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Jonathan Schwender</li>
 <li>José Dapena Paz</li>
 <li>Joyee Cheung</li>
+<li>Juan J. Sanchez</li>
 <li>Justin Michaud</li>
 <li>Keeley Hammond</li>
 <li>Keith Cirkel</li>
@@ -368,7 +369,9 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Luke Warlow</li>
 <li>Maksim Sisov</li>
 <li>Manuel Rego</li>
+<li>Marais Rossouw</li>
 <li>Mario Sánchez-Prada</li>
+<li>Martin Alvarez-Espinar</li>
 <li>Martin Robinson</li>
 <li>Max Ihlenfeldt</li>
 <li>Maxim Yaskevich</li>
@@ -411,6 +414,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Simon Pena</li>
 <li>Simon Wülker</li>
 <li>snek</li>
+<li>Stefan Reinhold</li>
 <li>Stephen Chenney</li>
 <li>Taym Haddadi</li>
 <li>Thomas Steiner</li>
