deploy: 8cf462c0b1be9541f5d1675c68bfb457d2b65930

--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Ankesh Bharti</li>
 <li>Anna Weine</li>
 <li>Anne van Kesteren</li>
+<li>Antonio Gomes Netto</li>
 <li>Bernd Kaiser</li>
 <li>Byungwoo Lee</li>
 <li>Carlos Bentzen</li>
@@ -331,6 +332,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Claudio Saavedra</li>
 <li>Daniel Ehrenberg</li>
 <li>Dave Vandyke</li>
+<li>Delan Azabani</li>
 <li>Diego González</li>
 <li>Diego Pino Garcia</li>
 <li>Dietrich Ayala</li>
@@ -343,6 +345,8 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Frédéric Wang</li>
 <li>Georges Basile Stavracas Neto</li>
 <li>Giorgio Maone</li>
+<li>Gyuyoung Kim</li>
+<li>Henrique Ferreiro</li>
 <li>Ioanna M. Dimitriou H.</li>
 <li>Jan Bajana</li>
 <li>Jeongeun Kim</li>
@@ -366,6 +370,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Lola Odelola</li>
 <li>Lorenzo Tilve</li>
 <li>Luca Casonato</li>
+<li>Luke Hubbard</li>
 <li>Luke Warlow</li>
 <li>Maksim Sisov</li>
 <li>Manuel Rego</li>
@@ -419,6 +424,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Taym Haddadi</li>
 <li>Thomas Steiner</li>
 <li>Tiago Vignatti</li>
+<li>Tom Schuster</li>
 <li>Ujjwal Sharma</li>
 <li>Valerie Young</li>
 <li>Vincent Hilla</li>
