--- a/index.html
+++ b/index.html
@@ -323,10 +323,12 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Anne van Kesteren</li>
 <li>Antonio Gomes Netto</li>
 <li>Bernd Kaiser</li>
+<li>Brian Kardell</li>
 <li>Byungwoo Lee</li>
 <li>Carlos Bentzen</li>
 <li>Carmen Cañas</li>
 <li>Casiano Rodriguez-Leon</li>
+<li>Chengzhong Wu</li>
 <li>Chris Cuellar</li>
 <li>Claudio Saavedra</li>
 <li>Daniel Ehrenberg</li>
@@ -347,8 +349,11 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Giorgio Maone</li>
 <li>Gyuyoung Kim</li>
 <li>Henrique Ferreiro</li>
+<li>Ian Grunert</li>
 <li>Ioanna M. Dimitriou H.</li>
+<li>Jacobo Aragunde Pérez</li>
 <li>Jan Bajana</li>
+<li>Javier Fernandez Garcia-Boente</li>
 <li>Jeongeun Kim</li>
 <li>Jesse Alama</li>
 <li>Jon Butler</li>
@@ -423,7 +428,6 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Stephen Chenney</li>
 <li>Taym Haddadi</li>
 <li>Thomas Steiner</li>
-<li>Tiago Vignatti</li>
 <li>Tom Schuster</li>
 <li>Ujjwal Sharma</li>
 <li>Valerie Young</li>
