deploy: 358b6e2833401ec9b79c40606d10bdce0b99d2cc

--- a/index.html
+++ b/index.html
@@ -439,6 +439,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Rui Hildt</li>
 <li>Sam Weinig</li>
 <li>Sergey Rubanov</li>
+<li>Shane F Carr</li>
 <li>sideshowbarker</li>
 <li>Simon Pena</li>
 <li>Simon Wülker</li>
