deploy: 36d84b3f61b757323a25cb2c8e2bfa64bcfcfe14

--- a/index.html
+++ b/index.html
@@ -304,23 +304,32 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 </section>
 <section id="breakout-sessions">
 <div class="section-wrapper">
-<h2>Breakout Sessions (from previous edition)</h2>
+<h2>Breakout Sessions</h2>
 <ul>
-<li><a href="https://github.com/Igalia/webengineshackfest/issues/33">Compiling JavaScript ahead of time</a></li>
-<li><a href="https://github.com/Igalia/webengineshackfest/issues/31">Demoing the new WebKit Container SDK</a></li>
-<li><a href="https://github.com/Igalia/webengineshackfest/issues/40">Funding the Web Ecosystem</a></li>
-<li><a href="https://github.com/Igalia/webengineshackfest/issues/24">How to build a new feature for the web platform — and make it a success with developers 2024</a></li>
-<li><a href="https://github.com/Igalia/webengineshackfest/issues/25">JavaScript standardization</a></li>
-<li><a href="https://github.com/Igalia/webengineshackfest/issues/38">Reference Targets for Cross-Shadow Root IDREF associations</a></li>
-<li><a href="https://github.com/Igalia/webengineshackfest/issues/28">Servo</a></li>
-<li><a href="https://github.com/Igalia/webengineshackfest/issues/27">Standardization across layers: Experiences with HTML, JS and Unicode</a></li>
-<li><a href="https://github.com/Igalia/webengineshackfest/issues/30">Testing OS-specific accessibility APIs in WPT - can it be done??</a></li>
-<li><a href="https://github.com/Igalia/webengineshackfest/issues/32">Trusted Types and The Sanitizer API</a></li>
-<li><a href="https://github.com/Igalia/webengineshackfest/issues/34">WPE-Android status update</a></li>
-<li><a href="https://github.com/Igalia/webengineshackfest/issues/26">Web Engines Rendering in Linux: sharing ideas and solutions</a></li>
-<li><a href="https://github.com/Igalia/webengineshackfest/issues/36">WebKit and Skia</a></li>
-<li><a href="https://github.com/Igalia/webengineshackfest/issues/29">WinterCG</a></li>
-<li><a href="https://github.com/Igalia/webengineshackfest/issues/35">Wolvic: a browser for WebXR applications</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/49">Adding a new Chrome DevTools feature</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/64">AsyncContext: trimming down the web integration</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/55">Browser Funding After Search Deals</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/51">Browser fingerprinting defense: review of the strategies used by different browsers</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/61">Chromium Embedding: Experiences and challenges</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/68">Cross-Origin Storage (COS)</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/54">Cross-shadow root ARIA</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/62">Data-oriented memory savings in JavaScript engines</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/66">Gosub &amp; Yavashark: A New Browser &amp; JS/TS Engine</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/56">HTML-in-Canvas: Proposal and Progress</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/46">Hackathon: Browser integration of Fontations Rust font stack</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/47">Involving students and researchers in web engine implementation</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/48">JavaScript subsets for custom embedding use-cases</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/58">Multimedia in WebKit</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/50">Privacy Preserving HTML and SVG in Canvas</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/59">Revisiting in-band text tracks in MediaSource Extensions</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/43">Running WPT under CI: Problems and challenges, tips and tricks, and lessons learned</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/57">Servo</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/63">Signals</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/65">TC39 proposals and integration with the web platform</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/67">Trusted Types</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/52">W3C Web Apps WG F2F</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/53">Web Platform: What are we working on?</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/60">tvOS as a new platform for Chromium</a></li>
 </ul>
 </div>
 </section>
