deploy: f73dfb5db5120af66bf0446aa1e7fae7d439f014

--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Christian Ulbrich</li>
 <li>Claudio Saavedra</li>
 <li>Daniel Ehrenberg</li>
+<li>Daniel Huigens</li>
 <li>Dave Vandyke</li>
 <li>Delan Azabani</li>
 <li>Diego González</li>
@@ -426,6 +427,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Nguyen Viet Do</li>
 <li>Nick Pfeiffer</li>
 <li>Nick Yamane</li>
+<li>Nico Burns</li>
 <li>Nicolò Ribaudo</li>
 <li>Nikolas Zimmermann</li>
 <li>Nina Kolesa</li>
