--- a/index.html
+++ b/index.html
@@ -378,6 +378,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Georges Basile Stavracas Neto</li>
 <li>Giorgio Maone</li>
 <li>Gyuyoung Kim</li>
+<li>Haili Bai</li>
 <li>Henrique Ferreiro</li>
 <li>Ian Grunert</li>
 <li>Ioanna M. Dimitriou H.</li>
