--- a/index.html
+++ b/index.html
@@ -389,6 +389,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Javier Fernandez Garcia-Boente</li>
 <li>Jeongeun Kim</li>
 <li>Jesse Alama</li>
+<li>John Xu</li>
 <li>Jon Butler</li>
 <li>Jon Kuperman</li>
 <li>Jonas Haukenes</li>
