--- a/index.html
+++ b/index.html
@@ -359,6 +359,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Casiano Rodriguez-Leon</li>
 <li>Chengzhong Wu</li>
 <li>Chris Cuellar</li>
+<li>Christian Liebel</li>
 <li>Christian Ulbrich</li>
 <li>Claudio Saavedra</li>
 <li>Daniel Ehrenberg</li>
