deploy: 873864eee2acf62e6cba0d44af43803201f6debd

--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
       <h1>Web Engines Hackfest 2025</h1>
       <h2>2-4 June | A Coruña, Galicia, Spain</h2>
       <div class="links">
-        <a href="https://forms.gle/jNm8xFWJHn3RTTyY8">Registration form</a>
+        <!--a href="https://forms.gle/jNm8xFWJHn3RTTyY8">Registration form</a-->
         <!--a href="https://forms.gle/rwfr1JEnYQBJJAks7">CFP: Talks</a-->
         <!--a href="https://github.com/Igalia/webengineshackfest/issues/new?template=breakout_session.yaml">CFP: Breakout Sessions</a-->
+        <a href="https://github.com/Igalia/webengineshackfest/wiki#scheduling">Scheduling</a>
       </div>
     </header>
 
