deploy: 4e7a950b9eb943174c65d219fc8bfc1734da5f75

--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li><a href="https://github.com/Igalia/webengineshackfest/issues/68">Cross-Origin Storage (COS)</a></li>
 <li><a href="https://github.com/Igalia/webengineshackfest/issues/54">Cross-shadow root ARIA</a></li>
 <li><a href="https://github.com/Igalia/webengineshackfest/issues/62">Data-oriented memory savings in JavaScript engines</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/71">Designing a New Web Engine — What Would You Do Differently?</a></li>
 <li><a href="https://github.com/Igalia/webengineshackfest/issues/66">Gosub &amp; Yavashark: A New Browser &amp; JS/TS Engine</a></li>
 <li><a href="https://github.com/Igalia/webengineshackfest/issues/56">HTML-in-Canvas: Proposal and Progress</a></li>
 <li><a href="https://github.com/Igalia/webengineshackfest/issues/46">Hackathon: Browser integration of Fontations Rust font stack</a></li>
