deploy: 05cce45e8bcd434635286c4d925534d38e3e5c55

--- a/index.html
+++ b/index.html
@@ -363,6 +363,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Chris Cuellar</li>
 <li>Christian Liebel</li>
 <li>Christian Ulbrich</li>
+<li>Claire Hurst</li>
 <li>Claudio Saavedra</li>
 <li>Daniel Ehrenberg</li>
 <li>Daniel Huigens</li>
@@ -475,6 +476,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Xiaoqian Wu</li>
 <li>Yeunjoo Choi</li>
 <li>Youenn Fablet</li>
+<li>Yutao Liu</li>
 </ul>
 </div>
 </section>
