deploy: 791e1d277260d5d43d9d69b75ce28e22e2999bca

--- a/index.html
+++ b/index.html
@@ -378,6 +378,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Eemeli Aro</li>
 <li>Emilio Cobos Álvarez</li>
 <li>Enrique Ocaña González</li>
+<li>Eri Pazos Pérez</li>
 <li>Frédéric Wang</li>
 <li>Gengming Liu</li>
 <li>Georges Basile Stavracas Neto</li>
@@ -464,7 +465,6 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>snek</li>
 <li>Stefan Reinhold</li>
 <li>Stephen Chenney</li>
-<li>Taym Haddadi</li>
 <li>Thomas Steiner</li>
 <li>Tom Schuster</li>
 <li>Ujjwal Sharma</li>
