deploy: 8b74912d6735725ae6e7091e80284aae6e0727ad

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <!--a href="https://forms.gle/rwfr1JEnYQBJJAks7">CFP: Talks</a-->
         <!--a href="https://github.com/Igalia/webengineshackfest/issues/new?template=breakout_session.yaml">CFP: Breakout Sessions</a-->
         <a href="https://github.com/Igalia/webengineshackfest/wiki#scheduling">Scheduling</a>
+        <a href="https://www.youtube.com/live/De4n7vjEO1o">Live streaming</a>
       </div>
     </header>
 
