deploy: e71de7abec71371b57c719e68d86a26ec29777e9

--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <ul>
 <li><a href="https://github.com/Igalia/webengineshackfest/issues/49">Adding a new Chrome DevTools feature</a></li>
 <li><a href="https://github.com/Igalia/webengineshackfest/issues/64">AsyncContext: trimming down the web integration</a></li>
+<li><a href="https://github.com/Igalia/webengineshackfest/issues/51">Browser Fingerprinting Protections in Tor+Mullvad Browser</a></li>
 <li><a href="https://github.com/Igalia/webengineshackfest/issues/55">Browser Funding After Search Deals</a></li>
-<li><a href="https://github.com/Igalia/webengineshackfest/issues/51">Browser fingerprinting defense: review of the strategies used by different browsers</a></li>
 <li><a href="https://github.com/Igalia/webengineshackfest/issues/61">Chromium Embedding: Experiences and challenges</a></li>
 <li><a href="https://github.com/Igalia/webengineshackfest/issues/68">Cross-Origin Storage (COS)</a></li>
 <li><a href="https://github.com/Igalia/webengineshackfest/issues/54">Cross-shadow root ARIA</a></li>
